--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/index.html",
-    "files.exclude": {
-        ".vscode": true
-    }
+    "livePreview.defaultPreviewPath": "/index.html"
 }
